Update package.bin on command generation

--- a/package.json
+++ b/package.json
@@ -1,27 +1,128 @@
 {
-  "name": "@win-dev-tools/core-utils",
-  "version": "1.0.1",
-  "description": "",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./lib/utils.js",
-      "types": "./lib/utils.d.ts"
-    }
-  },
-  "bin": {
-    "rm": "lib/bin/rm.js"
-  },
-  "scripts": {
-    "install": "node lib/install.js",
-    "build": "node scripts/generate-commands.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "commander": "^11.1.0",
-    "download": "^8.0.0"
-  }
+	"name": "@win-dev-tools/core-utils",
+	"version": "1.0.1",
+	"description": "",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/utils.js",
+			"types": "./lib/utils.d.ts"
+		}
+	},
+	"bin": {
+		"basename": "./lib/bin/basename.js",
+		"cat": "./lib/bin/cat.js",
+		"chgrp": "./lib/bin/chgrp.js",
+		"chmod": "./lib/bin/chmod.js",
+		"chown": "./lib/bin/chown.js",
+		"chroot": "./lib/bin/chroot.js",
+		"cksum": "./lib/bin/cksum.js",
+		"comm": "./lib/bin/comm.js",
+		"cp": "./lib/bin/cp.js",
+		"csplit": "./lib/bin/csplit.js",
+		"cut": "./lib/bin/cut.js",
+		"date": "./lib/bin/date.js",
+		"dd": "./lib/bin/dd.js",
+		"df": "./lib/bin/df.js",
+		"dir": "./lib/bin/dir.js",
+		"dircolors": "./lib/bin/dircolors.js",
+		"dirname": "./lib/bin/dirname.js",
+		"du": "./lib/bin/du.js",
+		"echo": "./lib/bin/echo.js",
+		"egrep": "./lib/bin/egrep.js",
+		"env": "./lib/bin/env.js",
+		"expand": "./lib/bin/expand.js",
+		"expr": "./lib/bin/expr.js",
+		"factor": "./lib/bin/factor.js",
+		"false": "./lib/bin/false.js",
+		"fgrep": "./lib/bin/fgrep.js",
+		"fmt": "./lib/bin/fmt.js",
+		"fold": "./lib/bin/fold.js",
+		"gdate": "./lib/bin/gdate.js",
+		"gecho": "./lib/bin/gecho.js",
+		"ginstall": "./lib/bin/ginstall.js",
+		"gln": "./lib/bin/gln.js",
+		"gmkdir": "./lib/bin/gmkdir.js",
+		"grep": "./lib/bin/grep.js",
+		"grmdir": "./lib/bin/grmdir.js",
+		"groups": "./lib/bin/groups.js",
+		"gsort": "./lib/bin/gsort.js",
+		"head": "./lib/bin/head.js",
+		"hostid": "./lib/bin/hostid.js",
+		"hostname": "./lib/bin/hostname.js",
+		"id": "./lib/bin/id.js",
+		"install": "./lib/bin/install.js",
+		"join": "./lib/bin/join.js",
+		"kill": "./lib/bin/kill.js",
+		"link": "./lib/bin/link.js",
+		"ln": "./lib/bin/ln.js",
+		"logname": "./lib/bin/logname.js",
+		"ls": "./lib/bin/ls.js",
+		"md5sum": "./lib/bin/md5sum.js",
+		"mkdir": "./lib/bin/mkdir.js",
+		"mkfifo": "./lib/bin/mkfifo.js",
+		"mknod": "./lib/bin/mknod.js",
+		"mv": "./lib/bin/mv.js",
+		"nice": "./lib/bin/nice.js",
+		"nl": "./lib/bin/nl.js",
+		"nohup": "./lib/bin/nohup.js",
+		"od": "./lib/bin/od.js",
+		"paste": "./lib/bin/paste.js",
+		"patch": "./lib/bin/patch.js",
+		"pathchk": "./lib/bin/pathchk.js",
+		"pinky": "./lib/bin/pinky.js",
+		"pr": "./lib/bin/pr.js",
+		"printenv": "./lib/bin/printenv.js",
+		"printf": "./lib/bin/printf.js",
+		"ptx": "./lib/bin/ptx.js",
+		"pwd": "./lib/bin/pwd.js",
+		"readlink": "./lib/bin/readlink.js",
+		"rm": "./lib/bin/rm.js",
+		"rmdir": "./lib/bin/rmdir.js",
+		"seq": "./lib/bin/seq.js",
+		"setuidgid": "./lib/bin/setuidgid.js",
+		"sha1sum": "./lib/bin/sha1sum.js",
+		"shred": "./lib/bin/shred.js",
+		"sleep": "./lib/bin/sleep.js",
+		"sort": "./lib/bin/sort.js",
+		"split": "./lib/bin/split.js",
+		"stat": "./lib/bin/stat.js",
+		"stty": "./lib/bin/stty.js",
+		"su": "./lib/bin/su.js",
+		"sum": "./lib/bin/sum.js",
+		"sync": "./lib/bin/sync.js",
+		"tac": "./lib/bin/tac.js",
+		"tail": "./lib/bin/tail.js",
+		"tee": "./lib/bin/tee.js",
+		"test": "./lib/bin/test.js",
+		"touch": "./lib/bin/touch.js",
+		"tr": "./lib/bin/tr.js",
+		"true": "./lib/bin/true.js",
+		"tsort": "./lib/bin/tsort.js",
+		"tty": "./lib/bin/tty.js",
+		"uname": "./lib/bin/uname.js",
+		"unexpand": "./lib/bin/unexpand.js",
+		"uniq": "./lib/bin/uniq.js",
+		"unlink": "./lib/bin/unlink.js",
+		"uptime": "./lib/bin/uptime.js",
+		"users": "./lib/bin/users.js",
+		"vdir": "./lib/bin/vdir.js",
+		"wc": "./lib/bin/wc.js",
+		"who": "./lib/bin/who.js",
+		"whoami": "./lib/bin/whoami.js",
+		"yes": "./lib/bin/yes.js",
+		"[": "./lib/bin/[.js"
+	},
+	"scripts": {
+		"install": "node lib/install.js",
+		"build": "node scripts/generate-commands.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"commander": "^11.1.0",
+		"download": "^8.0.0"
+	}
 }
